# x-phoenix

./: CHANGELOG.fengggli.md  CMakeLists.txt  Defines.mk  README.md
allocator/: allocator_chooser.h
allocator/copager/: CMakeLists.txt  allocator_copager.cc  allocator_copager.h  test1.cpp
allocator/simple/: allocator_simple.h
cmake/: FindComanche.cmake  build_all_type.cmake  common.cmake
docs/copager/: HOWTO.md  nvme_quickref.md  qemu_conf.md  run_qemu.sh  ubuntu1604_libvirt.xml
include/: m_alloc.h  map_reduce.h  simple_alloc.h
results/: summary.md
scripts/: get_data.sh  run_all_apps.sh  run_qemu.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile
tests/histogram/: CMakeLists.txt  histogram.cpp
tests/kmeans/: CMakeLists.txt  kmeans.cpp
tests/linear_regression/: CMakeLists.txt  linear_regression.cpp
tests/matrix_multiply/: CMakeLists.txt  matrix_multiply.cpp
tests/pca/: CMakeLists.txt
tests/string_match/: CMakeLists.txt
tests/test_alloc/: CMakeLists.txt  test_alloc.cc  test_alloc.cpp  test_alloc_simple.cpp
tests/word_count/: CMakeLists.txt
